add slide and fade js back, make partials line up correctly

--- a/index.html
+++ b/index.html
@@ -27,7 +27,23 @@
     <div class="section" id="section-resources">
       <script>$('#section-resources').load('pages/list.html');</script>
     </div>
-
+    <script type="text/javascript" src="js/fade.js"></script>
+    <script>
+      $(function() {
+        $('a[href*=#]:not([href=#])').click(function() {
+          if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+            var target = $(this.hash);
+            target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+            if (target.length) {
+              $('html,body').animate({
+                scrollTop: target.offset().top
+              }, 1000);
+              return false;
+            }
+          }
+        });
+      });
+    </script>
   </body>
 
 </html>
