--- a/pages/list.html
+++ b/pages/list.html
@@ -8,82 +8,79 @@
               <a href="https://www.codeschool.com" target="_blank" class="list-group-item">Code School</a>
               <a href="https://teamtreehouse.com" target="_blank" class="list-group-item">Treehouse</a>
               -->
-              
-    
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center">Resources</h1>
-            <p class="lead text-center">Other places to go to learn web development.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <div class="lead" id="list">                                
-<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingZero">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseZero" aria-expanded="true" aria-controls="collapseZero">
-          General
-        </a>
-      </h4>
-    </div>
-    <div id="collapseZero" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingZero">
-      <div class="panel-body">
-        <a href="http://www.codecademy.com" target="_blank" class="list-group-item">Codecademy</a>
-        <a href="https://www.codeschool.com" target="_blank" class="list-group-item">Code School</a>
-        <a href="https://teamtreehouse.com" target="_blank" class="list-group-item">Treehouse</a>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingOne">
-      <h4 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Ruby on Rails
-        </a>
-      </h4>
-    </div>
-    <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-      <div class="panel-body">
-        <a href="http://rubyweekly.com" target="_blank" class="list-group-item">Ruby Weekly</a>
-        <a href="https://www.railstutorial.org" target="_blank" class="list-group-item">Ruby on Rails Tutorial by Michael Hartl</a>
-        <a href="http://railscasts.com" target="_blank" class="list-group-item">RailsCasts - Ruby on Rails Screencasts</a>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingTwo">
-      <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Javascript
-        </a>
-      </h4>
-    </div>
-    <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-      <div class="panel-body">
-        <a href="http://javascriptweekly.com" target="_blank" class="list-group-item">JavaScript Weekly</a>
-      </div>
-    </div>
-  </div>
-  <div class="panel panel-default">
-    <div class="panel-heading" role="tab" id="headingThree">
-      <h4 class="panel-title">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          HTML5
-        </a>
-      </h4>
-    </div>
-    <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-      <div class="panel-body">
-         <a href="http://html5weekly.com" target="_blank" class="list-group-item">HTML5 Weekly</a>
-      </div>
-    </div>
-  </div>
-</div>
 
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center">Resources</h1>
+      <p class="lead text-center">Other places to go to learn web development.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <div class="lead" id="list">
+        <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingZero">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseZero" aria-expanded="true" aria-controls="collapseZero">
+                <h4 class="panel-title">General</h4>
+              </a>
+            </div>
+            <div id="collapseZero" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingZero">
+              <div class="panel-body">
+                <a href="http://www.codecademy.com" target="_blank" class="list-group-item">Codecademy</a>
+                <a href="https://www.codeschool.com" target="_blank" class="list-group-item">Code School</a>
+                <a href="https://teamtreehouse.com" target="_blank" class="list-group-item">Treehouse</a>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingOne">
+              <h4 class="panel-title">
+                <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  Ruby on Rails
+                </a>
+              </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+              <div class="panel-body">
+                <a href="http://rubyweekly.com" target="_blank" class="list-group-item">Ruby Weekly</a>
+                <a href="https://www.railstutorial.org" target="_blank" class="list-group-item">Ruby on Rails Tutorial by Michael Hartl</a>
+                <a href="http://railscasts.com" target="_blank" class="list-group-item">RailsCasts - Ruby on Rails Screencasts</a>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingTwo">
+              <h4 class="panel-title">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Javascript
+                </a>
+              </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
+              <div class="panel-body">
+                <a href="http://javascriptweekly.com" target="_blank" class="list-group-item">JavaScript Weekly</a>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-default">
+            <div class="panel-heading" role="tab" id="headingThree">
+              <h4 class="panel-title">
+                <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                  HTML5
+                </a>
+              </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+              <div class="panel-body">
+                 <a href="http://html5weekly.com" target="_blank" class="list-group-item">HTML5 Weekly</a>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+</div>
