--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>Learn Web Development</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/custom.css">
     <link href="images/icon.png" rel="icon" type="image">
@@ -19,7 +19,25 @@
       <script>$('#top').load('pages/navbar.html');</script>
     </div>
     <div class="section" id="section-slack">
-      <script>$('#section-slack').load('pages/slack.html');</script>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h1 class="text-center">Slack</h1>
+            <p class="lead text-center">Request an invite to our community.</p>
+            <p class="text-center">
+              <script async="" defer="" src="https://learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
+            </p>
+            <h4 class="text-center">Please take a moment and read through our
+              <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct" target="_blank">Code of Conduct</a>.
+            </h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <hr>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="section" id="section-projects">
       <script>$('#section-projects').load('pages/projects.html');</script>
