fix a weird flicker sometimes occuring

--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -12,13 +12,13 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="active">
-          <a href="#section-slack" onclick="scrollme(this)">Slack</a>
+          <a href="#section-slack" onclick="scrollme(this); return false;">Slack</a>
         </li>
         <li class="active">
-          <a href="#section-projects" onclick="scrollme(this)">Projects</a>
+          <a href="#section-projects" onclick="scrollme(this); return false;">Projects</a>
         </li>
         <li class="active">
-          <a href="#section-resources" onclick="scrollme(this)">Resources</a>
+          <a href="#section-resources" onclick="scrollme(this); return false;">Resources</a>
         </li>
       </ul>
     </div>
