--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="stylesheet" href="stylesheets/custom.css">
     <link href="images/icon.png" rel="icon" type="image">
+    <script type="text/javascript">
+      (function() {
+        window.PA_SITE_ID = 2457964944098;
+        var u='//api.pleasant.io/';
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'pleasant.js'; s.parentNode.insertBefore(g,s);
+      })();
+    </script>
   </head>
 
   <body>
