--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Learn Web Development</title>
+    <title>&lt;slash/rocket&gt;</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -32,10 +32,10 @@
             <h1 class="text-center">Slack</h1>
             <p class="lead text-center">Request an invite to our community.</p>
             <p class="text-center">
-              <script async="" defer="" src="//learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
+              <script async="" defer="" src="//slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
             </p>
             <h4 class="text-center">Please take a moment and read through our
-              <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct" target="_blank">Code of Conduct</a>.
+              <a href="https://github.com/slashrocket/slashrocket-Code-Of-Conduct" target="_blank">Code of Conduct</a>.
             </h4>
           </div>
         </div>
