--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-md-12 text-center" id="hero">
       <h1 class="text-inverse">
-        <b>Learn Web Development</b>
+        <b>&lt;slash/rocket&gt;</b>
       </h1>
       <p class="lead text-inverse">
         <b>A community focused on learning and discussing web development</b>
