--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-md-12 text-center" id="hero">
       <h2 class="text-inverse">
-        <b>&lt;slash/rocket&gt;</b>
+        <b>slashrocket</b>
       </h2>
       <p class="text-inverse">
         <b>A community focused on learning and discussing web development</b>
