remove target _blank from link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <script async="" defer="" src="//slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
             </p>
             <h4 class="text-center">Please take a moment and read through our
-              <a href="https://github.com/slashrocket/slashrocket-Code-Of-Conduct" target="_blank">Code of Conduct</a>.
+              <a href="https://github.com/slashrocket/slashrocket-Code-Of-Conduct">Code of Conduct</a>.
             </h4>
           </div>
         </div>
