Update to include new project and links

--- a/index.html
+++ b/index.html
@@ -25,18 +25,15 @@
   <body>
     <div class="cover" id="top">
     </div>
-    <div class="section" id="section-slack">
+    <div class="section" id="section-community">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1 class="text-center">Slack</h1>
-            <p class="lead text-center">Request an invite to our community.</p>
+            <h1 class="text-center">Community</h1>
+            <p class="lead text-center">take a moment to read through our <a href="https://slashrocket.io/CodeOfConduct" target="_blank">code of conduct</a> then request an invite to Slack below or <a href="https://community.slashrocket.io" target="_blank">sign up for our forum</a>!</p>
             <p class="text-center">
-              <script async="" defer="" src="//slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
+              <script src="https://slashrocket-slackin.herokuapp.com/slackin.js?large"></script>
             </p>
-            <h4 class="text-center">Please take a moment and read through our
-              <a href="https://slashrocket.io/CodeOfConduct">Code of Conduct</a>.
-            </h4>
           </div>
         </div>
         <div class="row">
