--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li class="active">
-          <a href="#section-slack" onclick="scrollme(this); return false;">Slack</a>
+          <a href="#section-community" onclick="scrollme(this); return false;">Community</a>
         </li>
         <li class="active">
           <a href="#section-projects" onclick="scrollme(this); return false;">Projects</a>
@@ -32,7 +32,7 @@
         <b>slashrocket</b>
       </h1>
       <p class="text-inverse">
-        <b>A community focused on learning and discussing web development</b>
+        <b>a friendly community for learning and discussing development</b>
       </p>
     </div>
   </div>
