--- a/pages/list.html
+++ b/pages/list.html
@@ -14,7 +14,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1 class="text-center">Resources</h1>
-      <p class="lead text-center">Other places to go to learn web development.</p>
+      <p class="lead text-center">other places to go to learn development</p>
     </div>
   </div>
   <div class="row">
