--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,21 +2,26 @@
   <div class="row">
     <div class="col-md-12">
       <h1 class="text-center">Projects</h1>
-      <p class="lead text-center">We've built some things.</p>
+      <p class="lead text-center">projects completed by the slashrocket community</p>
     </div>
   </div>
   <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-3">
       <a href="http://redditgraphed.com" target="_blank"><img alt="A Picture of the Redditgraphed Web Site" src="images/redditgraphed.png" class="img-responsive img-thumbnail"></a>
       <h3 class="text-center">Redditgraphed</h3>
       <p class="text-center">Analysis of Reddit posts</p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
       <a href="https://stationstream.space" target="_blank"><img alt="A Picture of the StationStream Web Site" src="images/stationstream.png" class="img-responsive img-thumbnail"></a>
       <h3 class="text-center">StationStream</h3>
       <p class="text-center">Real-time tracking of the ISS</p>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
+      <a href="https://github.com/slashrocket/reactif" target="_blank"><img alt="A Picture of the Reactif Source Code" src="images/reactif.png" class="img-responsive img-thumbnail"></a>
+      <h3 class="text-center">Reactif</h3>
+      <p class="text-center">Better gif searching for Slack</p>
+    </div>
+    <div class="col-md-3">
       <a><img alt="A Placeholder Image" src="//pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
       <h3 class="text-center">Upcoming Project</h3>
       <p class="text-center">Help us make something great!</p>
