--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
     <div class="section">
-      <div class="container">
+      <div class="container" style="overflow:hidden">
         <div class="row">
           <div class="col-xs-12" style="height:50px;"></div>
         </div>
@@ -98,82 +98,82 @@
           </div>
         </div>
       </div>
-        <div class="section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <hr>
-              </div>
+      <div class="section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <hr>
             </div>
           </div>
         </div>
-        <div class="section" id="section-projects">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-12">
-                <h1 class="text-center">projects by the slashrocket team</h1>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-3">
-                <a href="http://redditgraphed.com/" target="_blank"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
-                <h2 class="text-center">redditgraphed</h2>
-                <p class="text-center">analysis of reddit posts</p>
-              </div>
-              <div class="col-md-3">
-                <a href="https://stationstream.space/" target="_blank"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
-                <h2 class="text-center">stationstream</h2>
-                <p class="text-center">real-time tracking of the ISS</p>
-              </div>
-              <div class="col-md-3">
-                <a href="https://github.com/slashrocket/reactif" target="_blank"><img src="/images/reactif.png" class="img-responsive img-thumbnail" alt="A screen shot of the reactif source code"></a>
-                <h2 class="text-center">reactif</h2>
-                <p class="text-center">better gif search for slack</p>
-              </div>
-              <div class="col-md-3">
-                <a href="https://github.com/slashrocket" target="_blank"><img src="/images/placeholder.png" class="img-responsive img-thumbnail" alt="A placeholder image"></a>
-                <h2 class="text-center">upcoming project...</h2>
-                <p class="text-center">help us make something great!</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-12" style="height:50px;"></div>
-            </div>
-          </div>
-        </div>
-        <footer class="section section-primary">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <h1>slashrocket</h1>
-                <p>a friendly developer community</p>
-              </div>
-              <div class="col-sm-6">
-                <p class="text-info text-right">
-                  <br>
-                  <br>
-                </p>
-                <div class="row">
-                  <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
-                    <a href="https://slashrocket.slack.com/"><i class="fa fa-3x fa-fw fa-slack text-inverse"></i></a>
-                    <a href="https://community.slashrocket.io/"><i class="fa fa-3x fa-fw fa-comments text-inverse"></i></a>
-                    <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
-                    <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-md-12 hidden-xs text-right">
-                    <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-slack"></i></a>
-                    <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-comments"></i></a>
-                    <a href="https://twitter.com/slashrocketio" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
-                    <a href="https://github.com/slashrocket" target="_blank"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </footer>
       </div>
+      <div class="section" id="section-projects">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="text-center">projects by the slashrocket team</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <a href="http://redditgraphed.com/" target="_blank"><img src="/images/redditgraphed.png" class="img-responsive img-thumbnail" alt="A screen shot of the redditgraphed web site"></a>
+              <h2 class="text-center">redditgraphed</h2>
+              <p class="text-center">analysis of reddit posts</p>
+            </div>
+            <div class="col-md-3">
+              <a href="https://stationstream.space/" target="_blank"><img src="/images/stationstream.png" class="img-responsive img-thumbnail" alt="A screen shot of the stationstream web site"></a>
+              <h2 class="text-center">stationstream</h2>
+              <p class="text-center">real-time tracking of the ISS</p>
+            </div>
+            <div class="col-md-3">
+              <a href="https://github.com/slashrocket/reactif" target="_blank"><img src="/images/reactif.png" class="img-responsive img-thumbnail" alt="A screen shot of the reactif source code"></a>
+              <h2 class="text-center">reactif</h2>
+              <p class="text-center">better gif search for slack</p>
+            </div>
+            <div class="col-md-3">
+              <a href="https://github.com/slashrocket" target="_blank"><img src="/images/placeholder.png" class="img-responsive img-thumbnail" alt="A placeholder image"></a>
+              <h2 class="text-center">upcoming project...</h2>
+              <p class="text-center">help us make something great!</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12" style="height:50px;"></div>
+          </div>
+        </div>
+      </div>
+      <footer class="section section-primary">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <h1>slashrocket</h1>
+              <p>a friendly developer community</p>
+            </div>
+            <div class="col-sm-6">
+              <p class="text-info text-right">
+                <br>
+                <br>
+              </p>
+              <div class="row">
+                <div class="col-md-12 hidden-lg hidden-md hidden-sm text-left">
+                  <a href="https://slashrocket.slack.com/"><i class="fa fa-3x fa-fw fa-slack text-inverse"></i></a>
+                  <a href="https://community.slashrocket.io/"><i class="fa fa-3x fa-fw fa-comments text-inverse"></i></a>
+                  <a href="https://twitter.com/slashrocketio"><i class="fa fa-3x fa-fw fa-twitter text-inverse"></i></a>
+                  <a href="https://github.com/slashrocket"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-12 hidden-xs text-right">
+                  <a href="https://slashrocket.slack.com/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-slack"></i></a>
+                  <a href="https://community.slashrocket.io/" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-comments"></i></a>
+                  <a href="https://twitter.com/slashrocketio" target="_blank"><i class="fa fa-3x fa-fw text-inverse fa-twitter"></i></a>
+                  <a href="https://github.com/slashrocket" target="_blank"><i class="fa fa-3x fa-fw fa-github text-inverse"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
 </html>
